<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_main"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100"
    tools:context="com.example.apu.safechat.LogInActivity"
    app:layout_collapseParallaxMultiplier="0.9">
        <TextView
            android:textColor="@color/white"
            android:layout_weight="10"
            android:textAlignment="center"
            android:background="@color/bg_main"
            android:textSize="25dp"
            android:text="To Login Enter the Password and Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <EditText

                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="15"
                    android:background="@drawable/round_edit_text"
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint" >
                </EditText>

                <EditText

                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round_edit_text"
                    android:layout_weight="15"
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emailField"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:textAlignment="center"
                    android:inputType="textPassword"/>
        </LinearLayout>

        <Button
            android:background="@drawable/round_button1"
android:textColor="@color/white"
            android:layout_weight="10"
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_below="@+id/passwordField"
            android:text="@string/login_button_label"/>


        <Button
            android:textColor="@color/white"
            android:background="@drawable/round_button1"
            android:layout_marginTop="80dp"
            android:layout_weight="10"
            android:id="@+id/resetPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_below="@+id/signUpText"
            android:text="@string/forget_password"/>

        <Button
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="@drawable/round_button1"
            android:id="@+id/signUpText"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up_text"/>

</LinearLayout>
<!--?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/purpleLight"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100"
    tools:context="com.example.apu.safechat.LogInActivity"
    app:layout_collapseParallaxMultiplier="0.9">
        <TextView
            android:layout_weight="20"
            android:textAlignment="center"
            android:background="@drawable/round_button"
            android:textSize="30dp"
            android:text="To Login Enter the Password and Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
<LinearLayout
    android:orientation="vertical"
    android:layout_weight="40"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <EditText

            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="20"
            android:background="@drawable/round_button"
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" >
        </EditText>

        <EditText

            android:layout_marginBottom="10dp"
            android:background="@drawable/round_button"
            android:layout_weight="20"
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailField"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>
</LinearLayout>

        <Button
            android:background="@drawable/round_button"
            android:layout_weight="20"
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:layout_below="@+id/passwordField"
            android:text="@string/login_button_label"/>

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/btn_reset_password"
            android:textColor="@android:color/black" />

        <TextView android:id="@+id/signUpText"
            android:layout_weight="20"
            android:textAlignment="center"
            android:textSize="50dp"
            android:background="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up_text"/>

</LinearLayout-->